--- a/style.css
+++ b/style.css
@@ -13,3 +13,24 @@ body {
     font-size: 50px;
     background-color: #BE5683;
 }
+
+/* Footer section */
+.footer {
+    background-color: #BE5683;
+    color: #FFE4E4;
+    bottom: 0;
+    width: 100%;
+    font-weight: 400;
+    padding: 5px;
+    text-align: center;
+    font-size: 20px;
+    position: fixed;
+}
+
+.footer a {
+    margin-right: 10px;
+}
+
+.fa-brands {
+    padding-top: 10px;
+}
